feat: handle fetching resume details
